--- a/clashN/clashN/clashN.csproj
+++ b/clashN/clashN/clashN.csproj
@@ -88,6 +88,7 @@
   <ItemGroup>
     <Content Include="clashN.ico" />
     <Content Include="Resources\help.png" />
+    <EmbeddedResource Include="Sample\SampleTun.yaml" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="log4net">
@@ -108,6 +109,7 @@
   </ItemGroup>
   <PropertyGroup />
   <ItemGroup>
+    <None Remove="Sample\SampleTun.yaml" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Update="Properties\Resources.resx">
