--- a/clashN/clashN/clashN.csproj
+++ b/clashN/clashN/clashN.csproj
@@ -97,6 +97,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="clashN.ico" />
+    <Content Include="Mixin.yaml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Resources\help.png" />
     <EmbeddedResource Include="Sample\SampleTun.yaml" />
   </ItemGroup>
@@ -119,6 +122,7 @@
   </ItemGroup>
   <PropertyGroup />
   <ItemGroup>
+    <None Remove="Mixin.yaml" />
     <None Remove="Sample\SampleTun.yaml" />
   </ItemGroup>
   <ItemGroup>
