--- a/clashN/clashN/clashN.csproj
+++ b/clashN/clashN/clashN.csproj
@@ -97,10 +97,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="clashN.ico" />
-    <Content Include="Mixin.yaml">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
     <Content Include="Resources\help.png" />
+    <EmbeddedResource Include="Sample\SampleMixin.yaml" />
     <EmbeddedResource Include="Sample\SampleTun.yaml" />
   </ItemGroup>
   <ItemGroup>
@@ -122,7 +120,7 @@
   </ItemGroup>
   <PropertyGroup />
   <ItemGroup>
-    <None Remove="Mixin.yaml" />
+    <None Remove="Sample\SampleMixin.yaml" />
     <None Remove="Sample\SampleTun.yaml" />
   </ItemGroup>
   <ItemGroup>
