--- a/clashN/clashUpgrade/clashUpgrade.csproj
+++ b/clashN/clashUpgrade/clashUpgrade.csproj
@@ -2,17 +2,9 @@
   <PropertyGroup>
     <TargetFramework>net6.0-windows</TargetFramework>
     <OutputType>WinExe</OutputType>
-    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <UseWindowsForms>true</UseWindowsForms>
-    <ImportWindowsDesktopTargets>true</ImportWindowsDesktopTargets>
+    <Copyright>Copyright © 2019-2020 (GPLv3)</Copyright>
+    <FileVersion>1.1.0.0</FileVersion>
 	<SatelliteResourceLanguages>en</SatelliteResourceLanguages>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>none</DebugType>
-  </PropertyGroup>
-  <PropertyGroup>
-    <StartupObject>clashUpgrade.Program</StartupObject>
-  </PropertyGroup>
-  <ItemGroup>
-  </ItemGroup>
 </Project>
