--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,5 @@
 /clashN/clashUpgrade/obj
 /clashN/clashUpgrade/Properties/PublishProfiles
 /clashN/clashN/Properties/PublishProfiles
+clashN/clashN/clashN.csproj.user
+clashN/clashUpgrade/clashUpgrade.csproj.user
