Startup using scheduled tasks

--- a/clashN/clashN/clashN.csproj
+++ b/clashN/clashN/clashN.csproj
@@ -20,7 +20,8 @@
 		<PackageReference Include="NHotkey" Version="2.1.0" />
 		<PackageReference Include="NHotkey.Wpf" Version="2.1.0" />
 		<PackageReference Include="QRCoder.Xaml" Version="1.4.3" />
-		<PackageReference Include="YamlDotNet" Version="12.0.1" /> 
+		<PackageReference Include="TaskScheduler" Version="2.10.1" />
+		<PackageReference Include="YamlDotNet" Version="12.0.2" />
 		<PackageReference Include="ZXing.Net.Bindings.Windows.Compatibility" Version="0.16.10" />
 		<PackageReference Include="ReactiveUI.Fody" Version="18.3.1" />
 		<PackageReference Include="ReactiveUI.Validation" Version="3.0.1" />
