--- a/clashN/clashUpgrade/clashUpgrade.csproj
+++ b/clashN/clashUpgrade/clashUpgrade.csproj
@@ -6,5 +6,6 @@
     <Copyright>Copyright © 2019-2020 (GPLv3)</Copyright>
     <FileVersion>1.1.0.0</FileVersion>
 	<SatelliteResourceLanguages>en</SatelliteResourceLanguages>
+	<BaseOutputPath>..\clashN\bin</BaseOutputPath>
   </PropertyGroup>
 </Project>
