--- a/clashN/clashN/clashN.csproj
+++ b/clashN/clashN/clashN.csproj
@@ -2,14 +2,15 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>net8.0-windows</TargetFramework>
+    <TargetFramework>net8.0-windows10.0.17763.0</TargetFramework>
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>  
     <ApplicationManifest>app.manifest</ApplicationManifest>
     <ImplicitUsings>enable</ImplicitUsings>
     <ApplicationIcon>ClashN.ico</ApplicationIcon>
 	<Copyright>Copyright © 2019-2024 (GPLv3)</Copyright>
-	<FileVersion>2.19</FileVersion>
+	<FileVersion>2.20</FileVersion>
+	<SupportedOSPlatformVersion>7.0</SupportedOSPlatformVersion>
   </PropertyGroup>
  
 
@@ -17,15 +18,15 @@
 		<PackageReference Include="MaterialDesignThemes" Version="4.9.0" />
 		<PackageReference Include="Hardcodet.NotifyIcon.Wpf" Version="1.1.0" />		 
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-		<PackageReference Include="NHotkey" Version="2.1.1" />
-		<PackageReference Include="NHotkey.Wpf" Version="2.1.1" />
+		<PackageReference Include="NHotkey" Version="3.0.0" />
+		<PackageReference Include="NHotkey.Wpf" Version="3.0.0" />
 		<PackageReference Include="QRCoder.Xaml" Version="1.4.3" />
 		<PackageReference Include="TaskScheduler" Version="2.10.1" />
-		<PackageReference Include="YamlDotNet" Version="13.7.1" />
+		<PackageReference Include="YamlDotNet" Version="15.1.0" />
 		<PackageReference Include="ZXing.Net.Bindings.Windows.Compatibility" Version="0.16.12" />
-		<PackageReference Include="ReactiveUI.Fody" Version="19.5.39" />
+		<PackageReference Include="ReactiveUI.Fody" Version="19.5.41" />
 		<PackageReference Include="ReactiveUI.Validation" Version="3.1.7" />
-		<PackageReference Include="ReactiveUI.WPF" Version="19.5.39" />
+		<PackageReference Include="ReactiveUI.WPF" Version="19.5.41" />
 		<PackageReference Include="Splat.NLog" Version="14.8.12" />
 		<PackageReference Include="System.Reactive" Version="6.0.0" />
 	</ItemGroup>
